# verifiers

./: AGENTS.md
claude_state/: building_vf_envs_matan_way.md  (+3 more)
environments/_m_confessions/: README.md  pyproject.toml
environments/_m_confessions/_m_confessions/: env.py  prompts.py  regular_monitor.py
environments/_m_confessions/claude_state/: directory.md  paper_summary.md
environments/_m_self_incrimination/: README.md  pyproject.toml
environments/_m_self_incrimination/_m_self_incrimination/: env.py
environments/_m_self_incrimination/_m_self_incrimination/eval/: __init__.py  compose.py  constraint.py  monitor.py  prompts.py
environments/_m_self_incrimination/claude_state/: research_notes.md
environments/_m_self_incrimination/claude_state/experiments/: 2026-06-15-RESULTS.md  2026-06-15-full-experiment.md  tweak-log.md
environments/_m_self_incrimination/claude_state/plans/: 2026-06-15-self-incrimination-impl.comments.jsonl  2026-06-15-self-incrimination-impl.md  2026-06-15-self-incrimination-plan-b-sft.comments.jsonl  2026-06-15-self-incrimination-plan-b-sft.md
environments/_m_self_incrimination/claude_state/smoke/: smoke_deepseek_chat_v3.jsonl  smoke_gpt_oss_20b.jsonl  smoke_qwen3_next_80b.jsonl
environments/_m_self_incrimination/claude_state/specs/: 2026-06-15-self-incrimination-design.comments.jsonl  2026-06-15-self-incrimination-design.md
environments/_m_self_incrimination/tests/: test_eval_helpers.py
environments/instruction_following_text/: README.md  pyproject.toml
environments/instruction_following_text/instruction_following_text/: __init__.py  constraints.py  dataset.py  env.py  prompts.py  rubrics.py  scorer_types.py  scorers.py  turn_logic.py  types.py
environments/instruction_following_text/tests/: test_constraints.py  test_dataset.py  test_rubrics.py  test_scorers.py  test_turn_logic.py
(+50 files in other folders)
